...
        val enterMiddleNameText = stringResource(R.string.enter_middle_name_text)
        val enterLastNameText = stringResource(R.string.enter_last_name_text)
        val enterDobText = stringResource(R.string.enter_dob_text)
        val enterBloodTypeText = stringResource(R.string.enter_blood_type_text)
        val enterBranchText = stringResource(R.string.enter_branch_text)
        if (showStandardModalState.topIconResId >= 0) {
            StandardModal(
                showStandardModalState.topIconResId,
                showStandardModalState.titleText,
                showStandardModalState.bodyText,
                showStandardModalState.positiveText,
                showStandardModalState.negativeText,
                showStandardModalState.neutralText,
                showStandardModalState.onDismiss
            )
        } else {
            if (transitionToCreateProductsScreen.not()) {
                Spacer(modifier = Modifier.padding(top = 16.dp))
                Row {
                    OutlinedTextField(
                        modifier = Modifier
                            .height(60.dp)
                            .testTag("OutlinedTextField"),
                        value = lastNameText,
                        onValueChange = {
                            lastNameText = it
...
                                text = label
                            )
                        }
                    }
                }
            }
            WidgetButton(
                padding = PaddingValues(top = 16.dp, bottom = 24.dp),
                onClick = {
                    donor.firstName = firstNameText
                    donor.middleName = middleNameText
                    donor.lastName = lastNameText
                    donor.dob = dobText
...
    val (selectedOption, onOptionSelected) = remember { mutableStateOf(radioOptions[if (isMale) 0 else 1]) }
    Row {
        radioOptions.forEach { text ->
            Row(
                Modifier
                    .height(60.dp)
                    .testTag("RadioButton")
                    .selectable(
                        selected = (text == selectedOption),
                        onClick = { onOptionSelected(text) }
                    )
                    .padding(horizontal = 16.dp)
            ) {
...
